--- a/src/app/Components/Lawyer/cases/cases.component.html
+++ b/src/app/Components/Lawyer/cases/cases.component.html
@@ -64,6 +64,13 @@
           <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
         </a>
       </li>
+      <li>
+        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#team-Components" [routerLink]="['/lawyer', lawyerId, 'invoice']">
+          <i class="icofont-users-alt-5"></i><mat-icon>description</mat-icon>
+          <span>Invoice</span>
+          <span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>
+        </a>
+      </li>
     </ul>
     <button class="btn btn-danger" (click)="onLogout()" style="background-color:#dc2f2f;color:white">
       Logout
