--- a/src/app/Components/Lawyer/lawyer-clients/css/tooplate-gotto-job.css
+++ b/src/app/Components/Lawyer/lawyer-clients/css/tooplate-gotto-job.css
@@ -4,7 +4,17 @@ Tooplate 2134 Gotto Job
 
 https://www.tooplate.com/view/2134-gotto-job
 
+
 */
+.navbar {
+  background: #f5f7fa;
+  border-bottom: 1px solid var(--border-color);
+  padding-top: 8px;
+  padding-bottom: 8px;
+  z-index: 10; /* Lower than the sidebar */
+
+}
+
 .hearing-cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -237,7 +247,7 @@ https://www.tooplate.com/view/2134-gotto-job
 
 
 .sidebar {
-  background: #6f4a91;
+  background: #2c3e50;
   position: fixed;
   top: 0;
   bottom: 0;
